<resources>
    <string name="app_name">Райф СБП</string>
    <string name="title_offers">Услуги</string>
    <string name="title_new_order">Новый заказ</string>
    <string name="title_new_bill">Выставить</string>
    <string name="title_history">История</string>
    <string name="title_profile">Профиль</string>
    <string name="new_order_subheading">Заполните данные</string>
    <string name="payer_name">ФИО плательщика</string>
    <string name="payment_date">Дата выставления счета</string>
    <string name="payer_number">Номер телефона плательщика</string>
    <string name="attach_order">Выберите услуги</string>
    <string name="create_payment">Выставить счет</string>
    <string name="choose_offers">Выберите услуги</string>
    <string name="dialog_accept">Ок</string>
    <string name="dialog_cancel">Отменить</string>
    <string name="currency_template">%s руб.</string>
    <string name="reattach_order">Изменить услуги</string>
    <string name="share_payment_link">Отправить ссылки для оплаты</string>
    <string name="retry">Повторить</string>
    <string name="error_check_connection_description">Не удалось выполнить запрос, повторите попытку позднее</string>
    <string name="title_order_created">Заказ успешно сформирован</string>
    <string name="not_paid_yet">Ожидается оплата</string>
    <string name="payment_complete">Оплачено</string>
    <string name="payment_error">Ошибка</string>

</resources>