<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_offers">

    <fragment
        android:id="@+id/navigation_offers"
        android:name="com.gitpub.raiffts.ui.offers.OffersFragment"
        android:label="@string/title_offers"
        tools:layout="@layout/fragment_offers" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.gitpub.raiffts.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_new_order"
        android:name="com.gitpub.raiffts.ui.new_order.NewOrderFragment"
        android:label="@string/title_new_order"
        tools:layout="@layout/fragment_new_order" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.gitpub.raiffts.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>