<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/default_content_padding"
    tools:context=".ui.new_order.NewOrderFragment">

    <TextView
        android:id="@+id/new_order_subheading"
        style="@style/Theme.RaifFTS.AppTextAppearance.Subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/new_order_subheading"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payer_name"
        style="@style/Theme.RaifFTS.Controls.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_item_vertical_margin"
        android:hint="@string/payer_name"
        app:layout_constraintTop_toBottomOf="@id/new_order_subheading">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Theme.RaifFTS.Controls.TextInputEditText.Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payer_number"
        style="@style/Theme.RaifFTS.Controls.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_item_vertical_margin"
        android:hint="@string/payer_number"
        app:layout_constraintTop_toBottomOf="@id/payer_name">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Theme.RaifFTS.Controls.TextInputEditText.Name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/payment_date"
        style="@style/Theme.RaifFTS.Controls.TextInputLayout.InputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/increased_item_vertical_margin"
        android:hint="@string/payment_date"
        app:layout_constraintTop_toBottomOf="@id/payer_number">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Theme.RaifFTS.Controls.TextInputEditText.Date"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/attach_order"
        style="@style/Theme.RaifFTS.Controls.TextButton.AttachPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/increased_item_vertical_margin"
        android:text="@string/attach_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/payment_date" />

    <Button
        android:id="@+id/create_payment"
        style="@style/Theme.RaifFTS.Controls.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_payment"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>