<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/colorDark3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_subheading"
        style="@style/Theme.RaifFTS.AppTextAppearance.Subheading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/choose_offers"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDark2"
        app:layout_constraintTop_toBottomOf="@id/dialog_subheading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/offer_list"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_divider" />

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDark2"
        app:layout_constraintBottom_toTopOf="@id/dialog_accept" />

    <TextView
        android:id="@+id/dialog_accept"
        style="@style/Theme.RaifFTS.Controls.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/dialog_accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dialog_cancel"
        style="@style/Theme.RaifFTS.Controls.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_accept" />

</androidx.constraintlayout.widget.ConstraintLayout>
